--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-      <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-<!--    <meta-->
-<!--      name="description"-->
-<!--      content="Web site created using create-react-app"-->
-<!--    />-->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1"/>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="theme-color" content="#000000"/>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
+    <!--    <meta-->
+    <!--      name="description"-->
+    <!--      content="Web site created using create-react-app"-->
+    <!--    />-->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link
             rel="stylesheet"
@@ -22,8 +23,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -34,23 +35,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BVN</title>
-  </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BXQG6BQND7"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-BXQG6BQND7');
-      // console.log = console.warn = console.error = () => {};
+    <title>Bảo Việt</title>
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BXQG6BQND7"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
 
-      // Look ma, no error!
-      console.error('Something bad happened.');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+    gtag('config', 'G-BXQG6BQND7');
+    // console.log = console.warn = console.error = () => {};
+
+    // Look ma, no error!
+    console.error('Something bad happened.');
 
 
-
-  </script>
+</script>
 <!--  <script>-->
 <!--      window.embeddedChatbotConfig = {-->
 <!--          chatbotId: "mOxPRoGROd1qp50hV7dkW",-->
@@ -63,18 +67,18 @@
 <!--          domain="www.chatbase.co"-->
 <!--          defer>-->
 <!--  </script>-->
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="height: 100%"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root" style="height: 100%"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
